# WhittedStyle_Raytracer

./: CMakeLists.txt  Intersection.hpp  Light.hpp  Material.hpp  Object.hpp  PPMGenerator.hpp  README.md  Renderer.hpp  Scene.hpp  Sphere.hpp  Texture.hpp  Triangle.hpp  Vector.hpp  WhittedStyleRT.vcxproj  WhittedStyleRT.vcxproj.filters  backup_bunny.txt  bunny_shadow.txt  config.txt  gla_bunny_tex.txt  global.hpp  main.cpp
include/: BVH.hpp  BVHStrategy.hpp  BaseInterStrategy.hpp  BoundBox.hpp  Light.hpp  Material.hpp  Object.hpp  PPMGenerator.hpp  Renderer.hpp  Scene.hpp  Sphere.hpp  Triangle.hpp  Vector.hpp  global.hpp
src/: main.cpp
x64/Debug/: WhittedStyleRT.exe.recipe  vc143.idb
x64/Debug/WhittedStyleRT.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  WhittedStyleRT.lastbuildstate  link.command.1.tlog  link.read.1.tlog  link.write.1.tlog
